--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ table{background-color:yellow}
 <body>
 <table border="2px solid black" height="69"width="800"align="center">
 <tr>
-<td><button height="100px" width="20px"><a href="C:\Users\himanshu\Desktop\hinanshu\aboutme.html" target="iframe_1"><h2><I>ABOUT ME</I></h2></a></button></td>
-<td><button><a href="C:\Users\himanshu\Desktop\hinanshu\qualification.html" target="iframe_1"><h2><I>QUALIFICATION</I></h2></a></button></td>
-<td><button><a href="C:\Users\himanshu\Desktop\hinanshu\courses.html"target="iframe_1"><h2><I>COURSES</h2></a></button></td>
-<td><button><a href="C:\Users\himanshu\Desktop\hinanshu\about html.html"target="iframe_1"><h2><I>ANOUT HTML</I></h2></a></button></td>
-<td><button><a href="C:\Users\himanshu\Desktop\hinanshu\location.html" target="iframe_1"><h2><I>LOCATION</I></h2></a></button></td>
+<td><button height="100px" width="20px"><a href="aboutme.html" target="iframe_1"><h2><I>ABOUT ME</I></h2></a></button></td>
+<td><button><a href="qualification.html" target="iframe_1"><h2><I>QUALIFICATION</I></h2></a></button></td>
+<td><button><a href="courses.html"target="iframe_1"><h2><I>COURSES</h2></a></button></td>
+<td><button><a href="about html.html"target="iframe_1"><h2><I>ANOUT HTML</I></h2></a></button></td>
+<td><button><a href="location.html" target="iframe_1"><h2><I>LOCATION</I></h2></a></button></td>
 </tr>
 </table>
 <iframe height="700px"width="100%" name="iframe_1"></iframe>
