--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@ pre{color:black;}
 <h1>Name :</h1><h2>Himanshu verma</h2>
 <h1>Id :</h1><h2>2019kucp1120</h2>
 <h1>Branch :</h1><h2>compter science and engineering</h2>
-<img src="IMG_20191205_155928.jpg"height="300"width="300" align="right">
+<img src="IMG_20191205_155928.JPG"height="300"width="300" align="right">
 </pre>
 </body>
 </html>
