--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 <head>
 <title>about me</title>
 <style>
-body{background-image:url('download.jpg');
+body{background-image:url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fgiphy.com%2Fexplore%2Fbackground&psig=AOvVaw2w5WRGFHh3uv0SWexEIs0i&ust=1582797802622000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPibxJr87ucCFQAAAAAdAAAAABAD');
 }
 pre{color:black;}
 </style>
