--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 <head>
 <title>about me</title>
 <style>
-body{background-image:url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fgiphy.com%2Fexplore%2Fbackground&psig=AOvVaw2w5WRGFHh3uv0SWexEIs0i&ust=1582797802622000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPibxJr87ucCFQAAAAAdAAAAABAD');
+body{background-image:url('https://www.google.com/url?sa=i&url=http%3A%2F%2Frebloggy.com%2Fpost%2Frainbow-wallpaper-animated-gif-abstract-motion-graphics-glare-blender-cycles-pos%2F114528935689&psig=AOvVaw1pdHw9yf6KerRmYwvFt6gW&ust=1582797957024000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJD_2uj87ucCFQAAAAAdAAAAABAP');
 }
 pre{color:black;}
 </style>
