--- a/qualification.html
+++ b/qualification.html
@@ -3,7 +3,7 @@
 <head>
 <title>qualifications</title>
 </head>
-<body style="background-image:url('nature-3082832__340.jpg')">
+<body style="background-image:url('https://media.giphy.com/media/Qvp6Z2fidQR34IcwQ5/giphy-downsized-large.gif')">
 <h1 style="color:red"align="center">87.6 % in 12th <br>JEE main cracked and take admission in IIIT Kota</h1>
 </body>
 </html>
