--- a/aboutme.html
+++ b/aboutme.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 <title>about me</title>
+ <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 <style>
 body{background-image:url('https://thumbs.gfycat.com/AnimatedDeficientAlleycat-size_restricted.gif');
 }
