--- a/aboutme.html
+++ b/aboutme.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>about me</title>
+<!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <style>
 body{background-image:url('https://thumbs.gfycat.com/AnimatedDeficientAlleycat-size_restricted.gif');
 }
@@ -9,12 +12,15 @@ pre{color:black;}
 </style>
 </head>
 <body>
+ hhdshdsdsdhsj
 <pre align="center"style="background-color:white">
 <h1>Name :</h1><h2>Himanshu verma</h2>
 <h1>Id :</h1><h2>2019kucp1120</h2>
-<h1>Branch :</h1><h2>compter science and engineering</h2>
+<h1>Branch :</h1>
+<h2>compter science and engineering</h2>
 <img src="IMG_20191205_155928.JPG"height="300"width="300" align="right">
 </pre>
+  hhdshdsdsdhsj
 </body>
 </html>
 
